reports/string_methods.log
Traceback (most recent call last):
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\justb\anaconda3\envs\python37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\justb\anaconda3\envs\python37\lib\site-packages\nbclient\client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
sentence = "He yelled, "I have had enough!" before storming out of the room."
------------------

[1;36m  File [1;32m"<ipython-input-5-4965ff137a3f>"[1;36m, line [1;32m1[0m
[1;33m    sentence = "He yelled, "I have had enough!" before storming out of the room."[0m
[1;37m                            ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-5-4965ff137a3f>, line 1)

